# snpviewer

./: .gitignore  README.md  pyproject.toml
src/snpviewer/: __init__.py  app.py  main.py  touchstone_loader.py
src/snpviewer/io/: touchstone_loader.py
src/snpviewer/plotting/: __init__.py  sparam_plot.py
src/snpviewer/services/: network_service.py
src/snpviewer/ui/: __init__.py  main_window.py  sparam_browser.py
tests/: test_touchstone_loader.py
tests/fixtures/touchstone/: invalid_2port.s2p  not_touchstone.txt  valid_2port.s2p
